# mpithread

./: .gitignore  Makefile  README.md  config.bash.in  hostnames.c  meson.build  openmp.c  ping_pong.c  print_thread_level.c  test-slurm.bash
